--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="regularview">Regular View</string>
     <string name="hikebikemapview">Hike Bike Map View</string>
     <string name="selectmap">Select Map</string>
+    <string name="setlocation">Set Location</string>
 </resources>
